# cleancode

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  config.h.in  configure.ac
audio/: Makefile.am  calib_it.S  calib_it.h  gsxb.h  mcsn.h  stfa.h  xbios.c
autotools/: Makefile.in
bus/: Makefile.am  bus_pci.c  bus_scsi.c  pci.c  pci.h  pci.ids  pci_bios.c  pci_bios.h  pci_xpci.c  pci_xpci.h  pcinames.c  scsi.c  scsi.h  scsidrv.c  scsidrv.h
cdrom/: Makefile.am  device.c  metados.c  metados.h
common/: Makefile.am  ikbd.S  ikbd.h  mfp.h  mxalloc.c  mxalloc.h  param.c  param.h
disk/: Makefile.am  xhdi.c  xhdidemo.c
hardware/: Makefile.am  hardware.c  hw_cpu.S  hw_cpu.h  hw_regs.S  mmu.c  mmu.h  rsvf.h  rsvfdemo.c
joystick/: Makefile.am  ikbdintr.c  joypad.c  xbios.c  xbios_it.S
keyboard/: Makefile.am  Makefile.in  aes.c  bios.c  console.c  gemdos.c  ikbdintr.c  ikbdpoll.c
mouse/: Makefile.am  aes_evnt.c  aes_graf.c  ikbdintr.c  mouse.c  vdi.c  xbios.c  xbios_it.S
video/: Makefile.am  aes.c  blowup.h  cscreen.h  eddi.S  eddi_s.h  mvdi.h  nova.c  nova.h  overscan.h  rgb.c  sblast2.c  sblast2.h  sblast3.c  sblast3.h  vdi.c  vdi_com.c  vdi_com.h  videlity.c  videlity.h  vinside.c  vinside.h  vscr.h  xbios.c
